--- a/Page2.html
+++ b/Page2.html
@@ -18,7 +18,7 @@
             </pre>
             <nav>
                 <ul>
-                    <li><a href="Page1.html">На главную</a></li>
+                    <li><a href="index.html">На главную</a></li>
                     <li><a href="Page3.html">Страница 3</a></li>
                 </ul>
             </nav>
