--- a/Page2.html
+++ b/Page2.html
@@ -77,6 +77,7 @@
             </section>
         </main>
         <footer>
+            <p><b>Автор сайта:</b> <i>Филатова Екатерина <sup><a href="https://t.me/avotaliff">telegram</a></sup></i></p>
         </footer>
     </body>
 </html>
