--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <link href="style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">-->
     <title>Сайт начинающего верстальщика</title>
   </head>
   <body>
@@ -21,8 +21,11 @@
       <section>
         <script type="text/javascript">
           document.write(Date());
-      </script>
+        </script>
       </section>
+      <article>
+      <a href="Филатова_Резюме.pdf" download>Скачать мое резюме</a>
+      </article>
     </main>
 
     <footer>
