--- a/Page3.html
+++ b/Page3.html
@@ -11,18 +11,33 @@
 
     <main>
       <nav>
-        <h2>Навигация:</h2>
+        <h2>Навигация по сайту:</h2>
         <ul>
           <li><a href="index.html">На главную</a></li>
           <li><a href="Page2.html">Страница 2</a></li>
         </ul>
+        <h2 id="content">Навигация по странице:</h2>
+        <ul>
+          <li><a href="#left">ЛР №7. Использование слоев</a></li>
+          <li><a href="#gifs">ЛР №8. Использование графики и мультимедиа</a></li>
+          <li><a href="#tables">ЛР №8. Использование таблиц верстки</a></li>
+        </ul>
       </nav>
       <section>
         <h3>Лабораторная работа №7. Использование слоев.</h3>
-        <div id="left"><img src="leftImg.png"></div>
-        <div id="central"><img src="centralImg.png"></div>
-        <div id="right"><img src="rightImg.png"></div>
+          <div id="left"><img src="leftImg.png"></div>
+          <div id="central"><img src="centralImg.png"></div>
+          <div id="right"><img src="rightImg.png"></div>
       </section>
+      <section>
+        <h3>Лабораторная работа №8. Использование графики и мультимедиа.</h3>
+        <img src="filatova_slushaet.gif" height="400" alt="Филатова слушает">
+        <img id="goritsky" src="goritskiy_govorit.gif" height="200" alt="Горицкий говорит">  
+      </section>
+      <p><a href="#content">К оглавлению</a></p>
+      <aside>
+        Тут могла быть ваша реклама
+      </aside>
     </main>
 
     <footer>
