--- a/Page3.html
+++ b/Page3.html
@@ -18,21 +18,21 @@
           </ul>
         <h2 id="content">Навигация по странице:</h2>
           <ul>
-            <li><a href="#left">ЛР №7. Использование слоев</a></li>
-            <li><a href="#gifs">ЛР №8. Использование графики и мультимедиа</a></li>
-            <li><a href="#tables">ЛР №8. Использование таблиц верстки</a></li>
+            <li><a href="#layer">ЛР №7. Использование слоев</a></li>
+            <li><a href="#media">ЛР №8. Использование графики и мультимедиа</a></li>
+            <li><a href="#tables">ЛР №9. Использование таблиц верстки</a></li>
           </ul>
       </nav>
 
       <section>
-        <h3>Лабораторная работа №7. Использование слоев.</h3>
+        <h3 id="layer">Лабораторная работа №7. Использование слоев.</h3>
         <div id="left"><img src="leftImg.png"></div>
         <div id="central"><img src="centralImg.png"></div>
         <div id="right"><img src="rightImg.png"></div>   
       </section>
 
       <section>
-        <h3>Лабораторная работа №8. Использование графики и мультимедиа.</h3>
+        <h3 id="media">Лабораторная работа №8. Использование графики и мультимедиа.</h3>
           <figure>
             <img src="lights.png" alt="Карта изображений с ссылками цвета" usemap="#lightLink">
                 <map name="#lightLink">
