--- a/Page3.html
+++ b/Page3.html
@@ -68,7 +68,7 @@
             <img src="filatova_slushaet.gif" height="400" alt="Филатова слушает">
             <img src="goritskiy_govorit.gif" height="200" alt="Горицкий говорит">
             <audio controls>
-              <course src="Daft_punk.mp3">
+              <sourse src="Daft_Punk.mp3">
             </audio> 
             <figcaption>Выполнение задания пунктов 3.4 и 3.5 </figcaption>
         </figure> 
