--- a/Page3.html
+++ b/Page3.html
@@ -68,7 +68,7 @@
             <img src="filatova_slushaet.gif" height="400" alt="Филатова слушает">
             <img src="goritskiy_govorit.gif" height="200" alt="Горицкий говорит">
             <audio controls preload="auto">
-              <sourse src="smoke.mp3">
+              <sourse src="Daft_Punk.wav">
             </audio> 
             <figcaption>Выполнение задания пунктов 3.4 и 3.5 </figcaption>
         </figure> 
