--- a/Page3.html
+++ b/Page3.html
@@ -69,6 +69,7 @@
             <img src="goritskiy_govorit.gif" height="200" alt="Горицкий говорит">
             <audio controls preload="auto">
               <sourse src="Daft_Punk.wav">
+              Тег audio не поддерживается в браузере.
             </audio> 
             <figcaption>Выполнение задания пунктов 3.4 и 3.5 </figcaption>
         </figure> 
