--- a/Page3.html
+++ b/Page3.html
@@ -40,10 +40,7 @@
                   <area shape="circle" coords="56,163,38", href="https://ru.wikipedia.org/wiki/Желтый_цвет">
                   <area shape="circle" coords="51,252,38", href="https://ru.wikipedia.org/wiki/Зеленый_цвет">
                 </map>
-                <figcaption>
-                   Выполнение задания пункта 3.1
-                  <p>При нажатии на кружок происходит переход на статью</p>
-                </figcaption>
+                <figcaption>Выполнение задания пункта 3.1</figcaption>
           </figure>
           <figure>
             <img src="radioImg.png" alt="Карта изображений с ссылками на радио" usemap="#radioLink">
