--- a/index.html
+++ b/index.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <link href="style.css" rel="stylesheet">
-    <!--<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">-->
+    <link href="styleIndexPage.css" rel="stylesheet">
+    <link href="styleGeneral.css" rel="stylesheet">
     <title>Сайт начинающего верстальщика</title>
   </head>
   <body>
-    <header>
-      <h1>Главная страница</h1>
-    </header>
+    <div class="header">
+      <header>
+        <h1>Главная страница</h1>
+        <p><b>Автор сайта:</b> <i>Филатова Екатерина <sup><a href="https://t.me/avotaliff">telegram</a></sup></i></p>
+        <aside>Здесь могла быть ваша реклама</aside>
+      </header>
+    </div>
 
-    <main>
-      <nav>
-        <h2>Навигация:</h2>
-        <ul>
-          <li><a href="Page2.html">Страница 2</a></li>
-          <li><a href="Page3.html">Страница 3</a></li>
-        </ul>
-      </nav>
-      <section>
-        <script type="text/javascript">
-          document.write(Date());
-        </script>
-      </section>
-      <article>
-      <a href="Филатова_Резюме.pdf" download>Скачать мое резюме</a>
-      </article>
-    </main>
+    <div class="container">
+      <div class="menu">
+        <nav>
+          <h2>Навигация по сайту:</h2>
+          <ul>
+            <li><a href="Page2.html">Страница 2</a></li>
+            <li><a href="Page3.html">Страница 3</a></li>
+          </ul>
+        </nav>
+      </div>
 
-    <footer>
-      <p><b>Автор сайта:</b> <i>Филатова Екатерина <sup><a href="https://t.me/avotaliff">telegram</a></sup></i></p>
-    </footer>
+      <div class="main">
+        <section>
+          <script type="text/javascript">
+            document.write(Date());
+          </script>
+        </section>
+        <article>
+          <a href="Филатова_Резюме.pdf" download>Скачать мое резюме</a>
+        </article>
+      </div>
+    </div>
   </body>
 </html>  
