--- a/Page3.html
+++ b/Page3.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    <meta charset="UTF-8">
     <link href="stylePage3.css" rel="stylesheet">
     <link href="styleGeneral.css" rel="stylesheet">
     <title>Сайт начинающего верстальщика</title>
@@ -10,7 +11,6 @@
       <header>
         <h1>Третья страница</h1>    
         <p><b>Автор сайта:</b> <i>Филатова Екатерина <sup><a href="https://t.me/avotaliff">telegram</a></sup></i></p>
-        <aside>Здесь могла быть ваша реклама</aside>
       </header>
     </div>
 
@@ -26,7 +26,7 @@
           <h2>Навигация по странице:</h2>
             <ul>
               <li><a href="#layer">ЛР №7. Использование слоев</a></li>
-              <li><a href="#media">ЛР №8. Использование графики и мультимедиа</a></li>
+              <li><a href="#media">ЛР №8. Использование графики и мультимедиа</a></li>  
             </ul>
         </nav>
       </div>
